<resources>
    <string name="app_name">Our chat</string>
    <string name="facebook_app_id">1039249406417764</string>
    <string name="fb_login_protocol_scheme">fb1039249406417764</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_email_edit_text_hint">Enter your email</string>
    <string name="login_password_edit_text_hint">Enter password</string>
    <string name="login_login_button">Login</string>
    <string name="enter_your_user_name">Enter your user name</string>
    <string name="new_user">New user?  </string>
    <string name="sign_up">Sign up!</string>
    <string name="login">login</string>
    <string name="register">Register</string>
    <string name="social_login">Social login</string>
    <string name="wrong_email_format">Wrong email format</string>
    <string name="password_size">Password must be at least 6 characters</string>
    <string name="settings">Settings</string>
    <string name="edit_profle">Edit profle</string>
    <string name="logout">Logout</string>
    <string name="add_friend">Add friend</string>
    <string name="search">Search</string>
    <string name="about_me">Bio</string>
    <string name="edit">Edit</string>
    <string name="friends">Friends</string>
    <string name="select_profile_picture">Select profile picture</string>
    <string name="take_new_profile_picture">Take new profile picture</string>
    <string name="uploading">Uploading...</string>
    <string name="type_something_to_let_your_friends_know_you_better">Type something to let your friends know you better</string>
    <string name="submit">Submit</string>
    <string name="send_friend_request">Send friend request</string>
    <string name="send_message">Send message</string>
    <string name="friend_request_sent">Friend request sent.</string>
    <string name="friend_request_not_sent">Send friend request</string>
    <string name="confirm">Confirm</string>
    <string name="delete">Delete</string>
    <string name="incoming_requests">Incoming requests</string>
    <string name="share">Share app</string>
    <string name="loading">Loading...</string>
    <string name="no_incoming_requests">No incoming requests</string>
    <string name="no_friends_yet">No friends yet</string>
    <string name="find_friends">Find friends</string>
    <string name="profile">Profile</string>
    <string name="no_chat_history_yet_click_chat_button_to_start_chatting">No chat history yet, Click chat button to start chatting</string>
    <string name="no_one_to_chat_with_yet_add_more_friend_to_get_going">No one to chat with yet, Add friends to get going!</string>
    <string name="type_a_message">Type a message</string>
    <string name="empty_message">Can\'t send empty message</string>


    <!-- Date Util -->
    <string name="date_util_term_less">less than</string>
    <string name="date_util_term_a">a</string>
    <string name="date_util_term_an">an</string>

    <string name="date_util_unit_second">second</string>
    <string name="date_util_unit_seconds">seconds</string>
    <string name="date_util_unit_minute">minute</string>
    <string name="date_util_unit_minutes">minutes</string>
    <string name="date_util_unit_hour">hour</string>
    <string name="date_util_unit_hours">hours</string>
    <string name="date_util_unit_day">day</string>
    <string name="date_util_unit_days">days</string>
    <string name="date_util_unit_month">month</string>
    <string name="date_util_unit_months">months</string>
    <string name="date_util_unit_year">year</string>
    <string name="date_util_unit_years">years</string>

    <string name="date_util_prefix_lt">less than a</string>
    <string name="date_util_prefix_about">about</string>
    <string name="date_util_prefix_over">over</string>
    <string name="date_util_prefix_almost">almost</string>

    <string name="date_util_suffix">ago</string>
    <string name="you">You</string>
    <string name="recent_chats">Recent chats :</string>

</resources>
