<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <ScrollView
        android:id="@+id/parentScroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/secondaryLightColor"
        android:fillViewport="true">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!--  <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical"
                  tools:context=".LoginActivity">

















              </LinearLayout>-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <ImageView
                    android:id="@+id/small_circle"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/small_circle"
                    app:layout_constraintBottom_toBottomOf="@+id/half_circle"
                    app:layout_constraintEnd_toStartOf="@+id/half_circle" />

                <ImageView
                    android:id="@+id/half_circle"
                    android:layout_width="50dp"
                    android:layout_height="100dp"
                    android:src="@drawable/half_circle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/guideline" />


                <View
                    android:id="@+id/view6"
                    android:layout_width="5.6dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="#38b5f2"
                    app:layout_constraintBottom_toBottomOf="@+id/linear"
                    app:layout_constraintEnd_toStartOf="@+id/linear"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/linear" />

                <LinearLayout
                    android:id="@+id/linear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@drawable/round_rectangle"
                    android:orientation="vertical"
                    android:padding="16dp"
                    app:layout_constraintTop_toBottomOf="@id/half_circle">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/userName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:errorEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/userNameEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/ic_person_black_24dp"
                            android:drawablePadding="8dp"
                            android:hint="@string/enter_your_user_name"
                            android:inputType="textEmailAddress"
                            android:textColor="@color/primaryTextColor"
                            android:textSize="16sp" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:errorEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/emailEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/ic_email_black_24dp"
                            android:drawablePadding="8dp"
                            android:hint="@string/login_email_edit_text_hint"
                            android:inputType="textEmailAddress"
                            android:textColor="@color/primaryTextColor"
                            android:textSize="16sp" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:errorEnabled="true"
                        app:layout_constraintTop_toBottomOf="@id/email"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/passwordEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/ic_enhanced_encryption_black_24dp"
                            android:drawablePadding="8dp"
                            android:gravity="center_vertical"
                            android:hint="@string/login_password_edit_text_hint"
                            android:inputType="textPassword"
                            android:singleLine="true"
                            android:textColor="@color/primaryTextColor"
                            android:textSize="16sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/registerButton"
                    android:layout_width="90dp"
                    android:layout_height="41dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:layout_gravity="right"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/half_blue_roundshape_selector"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linear">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/register"
                        android:textColor="#ffffff"
                        android:textSize="15sp" />


                </LinearLayout>


                <View
                    android:id="@+id/view5"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="16dp"
                    android:background="@color/grey"
                    app:layout_constraintBottom_toBottomOf="@+id/textView4"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView4"
                    app:layout_constraintTop_toTopOf="@+id/textView4" />

                <View
                    android:id="@+id/view4"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="16dp"
                    android:background="@color/grey"
                    app:layout_constraintBottom_toBottomOf="@+id/textView4"
                    app:layout_constraintEnd_toStartOf="@+id/textView4"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textView4" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/social_login"
                    app:layout_constraintBottom_toTopOf="@+id/facebookLoginFragment"
                    app:layout_constraintEnd_toStartOf="@+id/view5"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/view4" />


                <fragment
                    android:layout_width="wrap_content"
                    android:id="@+id/facebookLoginFragment"
                    android:name="com.example.ourchat.ui.fbLoginFragment.FacebookLoginFragment"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_begin="34dp" />


            </androidx.constraintlayout.widget.ConstraintLayout>


            <!--for showing loading-->
            <include
                android:id="@+id/loadingLayout"
                layout="@layout/loading"
                android:visibility="gone" />


            <!--for showing if there any issue-->
            <include
                android:id="@+id/issueLayout"
                layout="@layout/issue_layout"
                android:visibility="gone" />



        </FrameLayout>

    </ScrollView>
</layout>
