<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animateLayoutChanges="true"
            android:background="@color/secondaryLightColor"
            android:scrollbarAlwaysDrawVerticalTrack="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <!--Top Profile Section -->
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/top_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/circularbordersolid"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardView2"
                        android:layout_width="150dp"
                        android:layout_height="90dp"
                        android:layout_marginTop="8dp"
                        app:cardCornerRadius="6dp"
                        app:cardElevation="0dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:id="@+id/profile_image"
                            android:layout_width="150dp"
                            android:layout_height="90dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/anonymous_profile" />

                    </androidx.cardview.widget.CardView>


                    <TextView
                        android:id="@+id/name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textColor="#424242"
                        android:textSize="21sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/cameraImageView"
                        tools:text="Amr mohammed" />

                    <TextView
                        android:id="@+id/email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textSize="14sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/name"
                        tools:text="amr@gmail.com" />

                    <ImageView
                        android:id="@+id/cameraImageView"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_marginTop="70dp"
                        android:background="@drawable/small_circle"
                        android:padding="8dp"
                        android:src="@drawable/ic_camera_alt_black_24dp"
                        app:layout_constraintEnd_toEndOf="@+id/cardView2"
                        app:layout_constraintStart_toEndOf="@+id/cardView2"
                        app:layout_constraintTop_toTopOf="@+id/cardView2" />


                </androidx.constraintlayout.widget.ConstraintLayout>


                <!--About Me Card-->
                <LinearLayout
                    android:id="@+id/about_me"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@drawable/circularbordersolid"
                    android:orientation="vertical"
                    android:padding="16dp"
                    app:layout_constraintTop_toBottomOf="@id/top_profile">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/about_me"
                                android:textSize="17sp"
                                android:textStyle="bold" />

                            <Space
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1" />

                            <TextView
                                android:id="@+id/edit"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="10dp"
                                android:text="@string/edit"
                                android:textColor="#FFCF66"
                                android:textSize="14sp" />
                        </LinearLayout>

                        <TextView
                            android:id="@+id/about_me_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            tools:text="Description goes here" />
                    </LinearLayout>

                </LinearLayout>

                <!--friends card-->
                <LinearLayout
                    android:id="@+id/friends"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@drawable/circularbordersolid"
                    android:orientation="vertical"
                    android:padding="16dp"
                    app:layout_constraintTop_toBottomOf="@id/about_me">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/friends"
                                android:textSize="17sp"
                                android:textStyle="bold" />


                            <TextView
                                android:id="@+id/friends_count_text_view"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:textSize="14sp"
                                tools:text="126" />
                        </LinearLayout>

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/friends_recycler"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                            tools:listitem="@layout/friend_item" />
                    </LinearLayout>

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>


        <!--persistant bottom navigation-->
        <androidx.core.widget.NestedScrollView
            android:id="@+id/bottom_sheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:behavior_hideable="true"
            app:behavior_peekHeight="0dp"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">


            <!--place_info_card-->
            <include
                android:id="@+id/place_info_card"
                layout="@layout/bottom_sheet_profile_picture" />


        </androidx.core.widget.NestedScrollView>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</layout>







